data/derived/comb/progs/unify/prog6210.ml.out
Characters 117-130:
  | _ when n > 0 -> digitsOfInt r :: [digit];;
                    ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
